--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# .gitignore_project
+# .gitignore
+
 *.class
-####################################
-######## OS generated files ########
-####################################
+
+#OS generated files
 .DS_Store
 .DS_Store?
 *.swp
@@ -12,9 +12,8 @@
 Icon?
 ehthumbs.db
 Thumbs.db
-####################################
-############# packages #############
-####################################
+
+#packages
 *.7z
 *.dmg
 *.gz
