0406 push. product module add --undone

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,7 +1,8 @@
 ftp.server.ip=你的FTP服务器ip地址
 ftp.user=mmallftp
 ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happymmall.com/
+#图片服务器url前缀
+ftp.server.httpURL.prefix=http://img.happymmall.com/
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 
