0505 push. zfb module done

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -4,7 +4,8 @@ ftp.pass=ftppassword
 #图片服务器url前缀
 ftp.server.httpURL.prefix=http://img.happymmall.com/
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+#支付宝回调地址，每次用natapp内网穿透后的域名，可能需要每次修改
+alipay.callback.url=http://c2ebyr.natappfree.cc/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
